slider mobile friendly

--- a/Views/Shared/_PartialInquiry.cshtml
+++ b/Views/Shared/_PartialInquiry.cshtml
@@ -72,7 +72,7 @@
                 <ul class="totals-table">
                     <li class="clearfix total"><span class="col">Toplam</span><span class="col ">@Model.TotalAmount ₺</span></li>
                     <li class="text-right">
-                        <a type="submit" class="theme-btn proceed-btn" id="check-out-inquiry" style="cursor:pointer;">İstek Gönder</a>
+                        <a type="submit" class="theme-btn proceed-btn" id="checkout-inquiry" style="cursor:pointer;">İstek Gönder</a>
                     </li>
                 </ul>
             </div>
