--- a/Views/Shared/_PartialRelatedProductsWidget.cshtml
+++ b/Views/Shared/_PartialRelatedProductsWidget.cshtml
@@ -5,22 +5,25 @@
         <h2>İlgili Ürünler</h2>
         <div class="separater"></div>
     </div>
-    <div class="swiper popular-products-swiper" id="related-product-carousel">
+</div>
+<div class="swiper products-swiper" >
     <div class="swiper-wrapper">
         @foreach (var item in Model)
         {
+            string imagePath = item.ProductVariants.FirstOrDefault()?.ImagePath ?? item.ProductCode; // Fallback to a default image path if no variants exist
+            string productName = @item.ProductName.Length > 30 ? @item.ProductName.Substring(0, 29) + "..." : @item.ProductName;
             <div class="swiper-slide">
                 <div class="post text-center p-2">
                     <figure class="post-thumb">
                         <a asp-controller="Shop" asp-action="ProductDetailed" asp-route-productCode="@item.ProductCode">
-                            <img loading="lazy" src="@Url.Content($"~/images/resource/products/{item.ProductCode}/1.jpg")"
+                            <img loading="lazy" src="@Url.Content($"~/images/resource/products/{imagePath}/1.jpg")"
                                  alt="@item.ProductName"
                                  style="width: 180px; height: 180px; object-fit: cover;" />
                         </a>
                     </figure>
                     <h4>
                         <a asp-controller="Shop" asp-action="ProductDetailed" asp-route-productCode="@item.ProductCode">
-                            @item.ProductName
+                            @productName
                         </a>
                     </h4>
                     <div class="rating">
