--- a/Views/Shop/ProductDetailed.cshtml
+++ b/Views/Shop/ProductDetailed.cshtml
@@ -121,6 +121,8 @@
         .image-column img {
             max-width: 100%;
             height: auto;
+            border-radius: 8px;
+            object-fit: cover; 
         }
 
         .content {
@@ -132,6 +134,10 @@
 
         {
             width: 100%; /* Adjust width for smaller screens */
+        }
+            .image-column
+        {
+            width: 100%;
         }
 
         }
@@ -260,7 +266,7 @@
     </div>
 </div>
 <input type="hidden" id="currentState" value="0" />
-<input type="hidden" class="user-id" value="@userId" />
+<input type="hidden" class="user-id" id="user-id" value="@userId" />
 
 @section FancyBox {
     <script src="~/js/jquery.fancybox.min.js" defer></script>
@@ -443,7 +449,7 @@
             });
 
             $(document).on("click", ".add-to-cart", function () {
-                var userId = $(this).closest('.clearfix').find('.user-id').val();
+                var userId = $('#user-id').val();
                 var productCode = $('#variant-code').val();
                 var quantity = 1;
                 var price = parseFloat($('#variant-price').text());
@@ -485,6 +491,7 @@
                 var userId = $(this).closest('.clearfix').find('.user-id').val();
                 var productCode = $('#variant-code').val();
                 var price = parseFloat($('#variant-price').text());
+                var userId = $('#user-id').val();
                 var quantity = 1;
 
                 var button = $(this);
