--- a/Views/Shop/ProductDetailed.cshtml
+++ b/Views/Shop/ProductDetailed.cshtml
@@ -159,8 +159,8 @@
                 <div class="product-details">
 
                     <!--Basic Details-->
-                    <div class="basic-details d-flex justify-content-center">
-                        <div class="row w-100">
+                    <div class="basic-details">
+                        <div class="row">
                             <div class="image-column col-lg-6 col-md-12 col-sm-12 " id="variant-image" >
                                 @Html.Partial("_PartialProductVariantImage", Model.ProductVariantImage)
                             </div>
