--- a/Views/Shop/ProductDetailed.cshtml
+++ b/Views/Shop/ProductDetailed.cshtml
@@ -160,7 +160,7 @@
 
                     <!--Basic Details-->
                     <div class="basic-details">
-                        <div class="row">
+                        <div class="row clearfix">
                             <div class="image-column col-lg-6 col-md-12 col-sm-12 " id="variant-image" >
                                 @Html.Partial("_PartialProductVariantImage", Model.ProductVariantImage)
                             </div>
@@ -231,7 +231,7 @@
                     </div>
                     <!--Basic Details ends-->
                     <!--Product Info Tabs-->
-                    <div class="product-info-tabs ml-3">
+                    <div class="product-info-tabs clearfix ml-3">
                         <!--Product Tabs-->
                         <div class="prod-tabs tabs-box">
 
