--- a/Views/Shop/ProductDetailed.cshtml
+++ b/Views/Shop/ProductDetailed.cshtml
@@ -32,9 +32,13 @@
 
 <style>
 
+#variant-image {
+    padding: 0;
+    margin: 0;
+}
+
         #variant-image .swiper {
             width: 100%;
-
             height: auto;
             position: relative;
         }
@@ -42,9 +46,10 @@
         /* Make each image same size */
         #variant-image .swiper-slide img {
             width: 100%;
-            height: 100%;
-            object-fit: cover; /* or 'contain' if you want full image */
+            height: auto;
+            object-fit: contain; /* or 'contain' if you want full image */
             border-radius: 8px;
+            display: block;
         }
 
 
@@ -142,7 +147,10 @@
         {
             width: 100%;
         }
-
+          #variant-image .swiper-button-prev,
+          #variant-image .swiper-button-next {
+                display: none;
+            }
          .basic-details .row {
                 flex-direction: column;
             }
