--- a/Views/Shop/ProductDetailed.cshtml
+++ b/Views/Shop/ProductDetailed.cshtml
@@ -181,7 +181,10 @@
                     <!--Basic Details-->
                     <div class="basic-details">
                        
-                          
+                       <div class="row clearfix">   
+                           <div class="image-column col-lg-6 col-md-12 col-sm-12 " id="variant-image" >
+                                @Html.Partial("_PartialProductVariantImage", Model.ProductVariantImage)
+                            </div>
                             <div class="info-column col-lg-6 col-md-12 col-sm-12 " >
 
                                 <div class="details-header" id="variant-info">
@@ -244,7 +247,7 @@
                                     }
                                     
                                 </div>
-                            
+                           </div>     
                         </div>
                     </div>
                     <!--Basic Details ends-->
