--- a/Views/Shop/ProductDetailed.cshtml
+++ b/Views/Shop/ProductDetailed.cshtml
@@ -47,7 +47,7 @@
         #variant-image .swiper-slide img {
             width: 100%;
             height: auto;
-            object-fit: contain; /* or 'contain' if you want full image */
+            object-fit: cover; /* or 'contain' if you want full image */
             border-radius: 8px;
             display: block;
         }
