--- a/Views/Shop/ProductDetailed.cshtml
+++ b/Views/Shop/ProductDetailed.cshtml
@@ -39,14 +39,14 @@
 
         #variant-image .swiper {
             width: 100%;
-            height: auto;
+            height: 180px;
             position: relative;
         }
 
         /* Make each image same size */
         #variant-image .swiper-slide img {
             width: 100%;
-            height: auto;
+            height: 180px;
             object-fit: cover; /* or 'contain' if you want full image */
             border-radius: 8px;
             display: block;
@@ -115,20 +115,10 @@
     color: white;
     }
 
-        .post-thumb {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 180px; /* or same as your image height if needed */
-            max-width: 100%;
-        }
+        
 
-        .image-column img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 8px;
-            object-fit: cover; 
-        }
+
+
 
         .content {
             word-wrap: break-word;
@@ -143,10 +133,7 @@
         {
             width: 100%; /* Adjust width for smaller screens */
         }
-            .image-column
-        {
-            width: 100%;
-        }
+
           #variant-image .swiper-button-prev,
           #variant-image .swiper-button-next {
                 display: none;
@@ -181,7 +168,7 @@
                     <!--Basic Details-->
                     <div class="basic-details">
 
-                            <div class="image-column col-lg-6 col-md-12 col-sm-12 " id="variant-image" >
+                            <div class="col-lg-6 col-md-12 col-sm-12 " id="variant-image" >
                                 @Html.Partial("_PartialProductVariantImage", Model.ProductVariantImage)
                             </div>
                             <div class="info-column col-lg-6 col-md-12 col-sm-12 " >
