--- a/Views/Shop/ProductDetailed.cshtml
+++ b/Views/Shop/ProductDetailed.cshtml
@@ -38,7 +38,10 @@
 }
 
 
-
+.swiper {
+  width: 600px;
+  height: 300px;
+}
 
 
             /* Adjust swiper navigation buttons inside the boundaries */
