--- a/Views/Shared/_PartialProductVariantImage.cshtml
+++ b/Views/Shared/_PartialProductVariantImage.cshtml
@@ -1,5 +1,5 @@
 ﻿@model BirileriWebSitesi.Models.ViewModels.ProductDetailedVariantImageViewModel
-<div class="swiper">
+<div class="swiper swiper-single-product">
     <div class="swiper-wrapper">
         @foreach (var imagePath in Model.FilePaths)
         {
