--- a/Views/Shop/ProductDetailed.cshtml
+++ b/Views/Shop/ProductDetailed.cshtml
@@ -40,7 +40,7 @@
 
 .swiper {
   width: 600px;
-  height: 300px;
+  height: auto;
 }
 
 
@@ -105,11 +105,6 @@
     background: #007bff;
     color: white;
     }
-
-        
-
-
-
 
         .content {
             word-wrap: break-word;
