--- a/Views/Shop/ProductDetailed.cshtml
+++ b/Views/Shop/ProductDetailed.cshtml
@@ -35,12 +35,13 @@
 #variant-image {
     padding: 0;
     margin: 0;
+    overflow: hidden;
 }
-
 
 .swiper-single-product {
   width: 100%;
   height: auto;
+max-width: 100%;
 }
 
 
