--- a/Views/Shop/ProductDetailed.cshtml
+++ b/Views/Shop/ProductDetailed.cshtml
@@ -44,7 +44,10 @@
 max-width: 100%;
 }
 
-
+.swiper-wrapper {
+  display: flex;
+  flex-wrap: nowrap;
+}
             /* Adjust swiper navigation buttons inside the boundaries */
             #variant-image .swiper-button-prev,
             #variant-image .swiper-button-next {
