--- a/Views/Shop/ProductDetailed.cshtml
+++ b/Views/Shop/ProductDetailed.cshtml
@@ -48,6 +48,13 @@ max-width: 100%;
   display: flex;
   flex-wrap: nowrap;
 }
+.variant-img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  display: block;
+  max-width: 100%;
+}
             /* Adjust swiper navigation buttons inside the boundaries */
             #variant-image .swiper-button-prev,
             #variant-image .swiper-button-next {
