--- a/Views/Shared/_PartialPopularProductsWidget.cshtml
+++ b/Views/Shared/_PartialPopularProductsWidget.cshtml
@@ -8,7 +8,7 @@
     </div>
 </div>
 
-<div class="swiper products-swiper" id="popular-product-carousel">
+<div class="swiper widget-swiper" id="popular-product-carousel">
     <div class="swiper-wrapper">
         @foreach (var item in Model)
         {
