--- a/Views/Shared/_PartialRelatedProductsWidget.cshtml
+++ b/Views/Shared/_PartialRelatedProductsWidget.cshtml
@@ -6,7 +6,7 @@
         <div class="separater"></div>
     </div>
 </div>
-<div class="swiper products-swiper" >
+<div class="swiper widget-swiper" >
     <div class="swiper-wrapper">
         @foreach (var item in Model)
         {
