--- a/Views/Shop/ProductDetailed.cshtml
+++ b/Views/Shop/ProductDetailed.cshtml
@@ -363,7 +363,7 @@ max-width: 100%;
                 }
             });
             // Swipe pics
-            const swiper = new Swiper('.swiper', {
+            const swiper = new Swiper('.swiper-single-product', {
                loop: true,
                lazy: true,
                speed: 400,
@@ -423,7 +423,7 @@ max-width: 100%;
                         $("#variant-info").html(response.infoPartial);
 
                         // Swipe pics
-                        const swiper = new Swiper('.swiper', {
+                        const swiper = new Swiper('.widget-swiper', {
                            loop: true,
                            lazy: true,
                            speed: 400,
