--- a/Views/Shop/ProductDetailed.cshtml
+++ b/Views/Shop/ProductDetailed.cshtml
@@ -54,6 +54,7 @@ max-width: 100%;
   object-fit: cover;
   display: block;
   max-width: 100%;
+max-height:300px;
 }
             /* Adjust swiper navigation buttons inside the boundaries */
             #variant-image .swiper-button-prev,
