--- a/Views/Shop/Index.cshtml
+++ b/Views/Shop/Index.cshtml
@@ -162,7 +162,7 @@
                                 $("#popular-products-div").html(result);
             
                                 setTimeout(function () {
-                                    new Swiper('.products-swiper', {
+                                    new Swiper('.swiper', {
                                         slidesPerView: 1,
                                         spaceBetween: 20,
                                         loop: true,
