--- a/Views/Shop/Index.cshtml
+++ b/Views/Shop/Index.cshtml
@@ -70,7 +70,9 @@
             align-items: center;
             height: 180px; /* or same as your image height if needed */
         }
-
+.swiper-wrapper {
+    display: flex !important;
+}
     </style>
 }
 <button class="mobile-filter-toggle" id="mobileFilterButton" style="display:none;" onclick="toggleMobileFilter()">
