--- a/Views/Shop/ProductDetailed.cshtml
+++ b/Views/Shop/ProductDetailed.cshtml
@@ -150,7 +150,9 @@ max-height:300px;
                 overflow-wrap: break-word;
             }
         }
-
+.swiper-wrapper {
+    display: flex !important;
+}
 </style>
 }
 
