--- a/Views/Shop/ProductDetailed.cshtml
+++ b/Views/Shop/ProductDetailed.cshtml
@@ -316,7 +316,7 @@ max-height:300px;
                             }
                         });
                          setTimeout(function () {
-                                    new Swiper('.products-swiper', {
+                                    new Swiper('.swiper', {
                                         slidesPerView: 1,
                                         spaceBetween: 20,
                                         loop: true,
